--- a/app/pages/property-list/property-list.html
+++ b/app/pages/property-list/property-list.html
@@ -13,6 +13,7 @@
             </ion-thumbnail>
             <h2>{{property.title}}</h2>
             <p>{{property.city}}, {{property.state}} ∙ {{property.priceFormatted}}</p>
+            <button (cllick)="updateRecord(property)" > Test </button>
         </button>
     </ion-list>
 </ion-content>
