--- a/app/pages/property-list/property-list.html
+++ b/app/pages/property-list/property-list.html
@@ -14,6 +14,6 @@
             <h2>{{property.title}}</h2>
             <p>{{property.city}}, {{property.state}} ∙ {{property.priceFormatted}}</p>
         </button>
-        <button (cllick)="updateRecord(property)" > Test </button>
+        <button (click)="updateRecord(property)" > Test </button>
     </ion-list>
 </ion-content>
