--- a/app/pages/property-details/property-details.html
+++ b/app/pages/property-details/property-details.html
@@ -33,6 +33,11 @@
                     <h3>Asking Price</h3>
                     <ion-note item-right>{{property.priceFormatted}}</ion-note>
                 </ion-item>
+                <ion-item>
+                    <ion-icon item-left name="pricetag"></ion-icon>
+                    <h3>Client Offer</h3>
+                    <button (click)="updateRecord(property)" > Offer </button>
+                </ion-item>
                 <button ion-item (click)="showBroker($event, property.broker)">
                     <ion-avatar item-left>
                         <img src="{{property.broker.picture}}"/>
